# SFML-2

./: CMakeLists.txt
class/: fontManager.cpp  renderer.cpp
src/: main.cpp
